# XettaCast

./: Cargo.toml  README.md
src/: app.rs  config_manager.rs  config_store.rs  lib.rs  main.rs  utils.rs  window.rs
src/assets/config/: default_app.yaml  default_global.yaml
src/assets/shaders/: renderer.wgsl
src/core/: app_config.rs  mod.rs  utils.rs  window.rs
src/graphics/: font.rs  instance.rs  mod.rs  pipeline.rs  renderer.rs  ssbo.rs  swapchain.rs  texture_packer.rs  ubo.rs
